<resources>
    <string name="app_name">K_crossfit</string>
    <string name="signin_title">회원가입</string>
    <string name="email">이메일*</string>
    <string name="email_hint">example@abc.com</string>
    <string name="password_hint">영문 소문자, 숫자, 특수문자(!@#$$%) 8~16자</string>
    <string name="password">비밀번호*</string>
    <string name="password_recheck">비밀번호 재확인*</string>
    <string name="name">이름*</string>
    <string name="next">다음</string>
    <string name="personalInfo">개인정보이용동의</string>
    <string name="TermsOfService">서비스이용약관동의</string>
    <string name="email_duplicate_check">중복확인</string>
    <string name="signin">회원가입</string>
    <string name="back">뒤로가기</string>
    <string name="name_hint">이름입력</string>
    <string name="loginId">loginId</string>
    <string name="userShared">userShared</string>
    <string name="wodShared">wodShared</string>

</resources>