<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/linearLayout_signIn_entireWrapper"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0B2B4A"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".login.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_signin_back"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="#0B2B4A"
            android:text="@string/back"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_signin_topTitle"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="152dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/giantsregulars"
            android:gravity="center"
            android:text="@string/signin_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editText_signIn_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:textAppearance="@style/Hint"
            android:textSize="15sp"
            android:privateImeOptions="defaultInputmode=korean"
           />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:bufferType="spannable"
            android:text="아이디*"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_signIn_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="10"
                android:ems="10"
                android:hint="id 입력"
                android:privateImeOptions="defaultInputmode=english"
                android:textAppearance="@style/Hint"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_signin_duplicateCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_duplicate_check"
                tools:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editText_signIn_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textAppearance="@style/Hint" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_recheck"
            android:maxLength="16"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editText_signIn_passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAppearance="@style/Hint" />

        <CheckBox
            android:layout_marginTop="20dp"
            android:id="@+id/checkBox_signin_TermsOfService"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/TermsOfService" />

        <CheckBox
            android:id="@+id/checkBox_signin_personalInfo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/personalInfo" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/button_signin_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin" />

    </LinearLayout>


</LinearLayout>